--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "mesto",
   "version": "1.0.0",
-  "description": "* Интро\r * Дизайн и вёрстка\r * Интерактивность\r * Картинки\r * Методология\r * Инструменты",
+  "description": "Место — фото-гид по России",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve"
+    "dev": "webpack serve",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "cssnano": "^5.1.12",
+    "gh-pages": "^4.0.0",
     "html-loader": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
     "image-webpack-loader": "^8.1.0",
